Revision history for Perl module Text::Abbrev

1.03 2016-01-?? FLORA
  * Tweaked format of this file to follow CPAN::Changes::Spec
  * Removed the name of the exported function (abbrev) from the NAME section.
    By convention the abstract is: <module-name> - <short description>

1.02 2012-09-11 FLORA
  * Fix NAME section.

1.01 2011-07-01 FLORA
  * First release to CPAN

    Previously this module was only part of the Perl core. This release is
    identical to version 1.01 of Text::Abbrev as shipped with the core as of
    version 5.8.1.