@@ -26,5 +26,7 @@ do_metadata = 1
 do_munging = 0
 
 [Prereqs]
-perl = 5.005
+perl     = 5.006
 Exporter = 0
+strict   = 0
+warnings = 0
