@@ -4,6 +4,7 @@ Revision history for Perl module Text::Abbrev
   * Tweaked format of this file to follow CPAN::Changes::Spec
   * Removed the name of the exported function (abbrev) from the NAME section.
     By convention the abstract is: <module-name> - <short description>
+  * Added use of strict and warnings, bumping min perl version to 5.006.
 
 1.02 2012-09-11 FLORA
   * Fix NAME section.
